<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/journalbackground"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context="com.amaromerovic.journalapp.StartWritingActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alatsi"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="10"
        android:text="@string/startWritingActivityText"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="5sp"
        app:cardElevation="7dp"
        app:cardUseCompatPadding="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:fontFamily="@font/alatsi"
            android:gravity="center"
            android:text="@string/journalOpenScreenMessageText"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="italic" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/startWritingButton"
        android:layout_width="230dp"
        android:layout_height="70dp"
        android:backgroundTint="#33000000"
        android:fontFamily="@font/alatsi"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="10"
        android:text="@string/start_writing"
        android:textSize="20sp"
        android:textStyle="bold"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp"
        tools:ignore="TextContrastCheck" />


</LinearLayout>


