<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.amaromerovic.journalapp.CreateAccountActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/journalbackground"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="25dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="35dp">

        <AutoCompleteTextView
            android:id="@+id/usernameCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:fontFamily="@font/alatsi"
            android:gravity="center"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:shadowColor="@color/black"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="10"
            android:textColor="@color/white"
            android:textColorHint="#CCFFFFFF"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="LabelFor,TextContrastCheck" />

        <AutoCompleteTextView
            android:id="@+id/emailCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:fontFamily="@font/alatsi"
            android:gravity="center"
            android:hint="@string/emailHintText"
            android:inputType="textEmailAddress"
            android:shadowColor="@color/black"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="10"
            android:textColor="@color/white"
            android:textColorHint="#CCFFFFFF"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="LabelFor,TextContrastCheck" />

        <EditText
            android:id="@+id/passwordCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:fontFamily="@font/alatsi"
            android:gravity="center"
            android:hint="@string/passwordHintText"
            android:inputType="textPassword"
            android:shadowColor="@color/black"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="10"
            android:textColor="@color/white"
            android:textColorHint="#CCFFFFFF"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="LabelFor,TextContrastCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/createAccountButtonFromCreateAccount"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_marginTop="30sp"
            android:backgroundTint="#33000000"
            android:fontFamily="@font/alatsi"
            android:gravity="center"
            android:shadowColor="@color/black"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="10"
            android:text="@string/create_account"
            android:textSize="17sp"
            android:textStyle="bold"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp"
            tools:ignore="TextContrastCheck" />


    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/progressBarLayoutFromCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:indeterminateTint="#38B6FF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>