<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#F2FFFFFF"
        app:cardCornerRadius="10sp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:cardCornerRadius="10sp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/postUsername"
                app:layout_constraintVertical_bias="0.0">

                <ImageView
                    android:id="@+id/postImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/postImage"
                    android:scaleType="centerCrop"
                    android:src="@color/orange"
                    tools:ignore="ImageContrastCheck" />

            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/postUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/alatsi"
                android:gravity="center"
                android:padding="5dp"
                android:shadowColor="#A8A8A8"
                android:shadowDx="8"
                android:shadowDy="8"
                android:shadowRadius="8"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="normal|bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="#0038B6FF"
                app:cardUseCompatPadding="false"
                app:layout_constraintBottom_toTopOf="@+id/postDate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                app:layout_constraintVertical_bias="0.0">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/postTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:background="@drawable/border"
                        android:backgroundTint="@color/blue"
                        android:fontFamily="@font/alatsi"
                        android:gravity="center"
                        android:hint="@string/title"
                        android:minHeight="48dp"
                        android:padding="10sp"
                        android:shadowColor="#A8A8A8"
                        android:shadowDx="8"
                        android:shadowDy="8"
                        android:shadowRadius="8"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textColorHint="#CC000000"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cardView"
                        tools:ignore="TextContrastCheck" />

                    <TextView
                        android:id="@+id/postThoughts"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:backgroundTint="#00000000"
                        android:fontFamily="@font/alatsi"
                        android:gravity="start"
                        android:hint="@string/your_thoughts"
                        android:minHeight="80dp"
                        android:padding="10sp"
                        android:shadowColor="#A8A8A8"
                        android:shadowDx="8"
                        android:shadowDy="8"
                        android:shadowRadius="8"
                        android:textColor="@color/black"
                        android:textColorHint="#CC000000"
                        android:textSize="21sp"
                        tools:ignore="TextContrastCheck" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/postDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/alatsi"
                android:gravity="center"
                android:padding="5dp"
                android:shadowColor="#A8A8A8"
                android:shadowDx="8"
                android:shadowDy="8"
                android:shadowRadius="8"
                android:text="@string/proptTextDate"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="normal|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2"
                tools:ignore="TextContrastCheck" />

            <ImageButton
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/deletePost"
                android:minHeight="48dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/ic_baseline_delete_forever_24"
                app:tint="@color/black"
                tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

            <ImageButton
                android:id="@+id/shareButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/deletePost"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_share_24"
                app:tint="@color/black" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
